<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="profile">Profile</string>
    <string name="user_name">User Name</string>
    <string name="user_email">user email</string>
    <string name="transactions">Transactions</string>
    <string name="no_transaction_yet">No Transaction Yet</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="created_at">Created at:</string>
    <string name="detail">Detail</string>
    <string name="detail_transaction">Detail Transaction</string>
    <string name="product">Product</string>
    <string name="quantity">1x Rp. 10.000</string>
    <string name="sub_total">Sub Total</string>
    <string name="rate">Rate</string>
    <string name="your_review">Enter your review…</string>
    <string name="post_review">Post Review</string>
    <string name="success_add_review">Review added successfully</string>
    <string name="back_pressed">Back to previous screen</string>
    <string name="product_image_of">Product Image of %s</string>
</resources>