<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginBottom="8dp"
    android:layout_marginHorizontal="16dp"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/iv_product"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@android:color/white"
                android:contentDescription="@string/product_image_of"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_product_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins"
                android:text="@string/product"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/iv_product"
                app:layout_constraintTop_toTopOf="@+id/iv_product" />

            <TextView
                android:id="@+id/tv_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:fontFamily="@font/poppins"
                app:layout_constraintStart_toStartOf="@+id/tv_product_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_product_title" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/iv_product"/>

            <TextView
                android:id="@+id/tv_sub_total_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/sub_total"
                android:fontFamily="@font/poppins"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/divider"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_sub_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/poppins"
                tools:text="Rp. 10.000"
                app:layout_constraintTop_toBottomOf="@id/tv_sub_total_text"
                app:layout_constraintStart_toStartOf="parent"/>

            <RatingBar
                android:id="@+id/rb_your_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?attr/ratingBarStyleSmall"
                android:progressTint="@color/colorAccent"
                android:rating="4"
                app:layout_constraintBottom_toBottomOf="@+id/tv_sub_total"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_sub_total_text"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:backgroundTint="@color/colorAccent"
                android:fontFamily="@font/poppins"
                android:text="@string/rate"
                android:textAllCaps="false"
                android:textColor="@color/colorBase"
                app:cornerRadius="24dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_sub_total"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_sub_total_text" />

            <!-- Form for post a review -->
            <RatingBar
                android:id="@+id/rb_rating_user_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="false"
                android:layout_marginTop="16dp"
                android:progressTint="@color/colorAccent"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sub_total" />

            <EditText
                android:id="@+id/et_input_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape_edit_text"
                android:padding="6dp"
                android:hint="@string/your_review"
                android:importantForAutofill="no"
                android:minHeight="100dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/rb_rating_user_input" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_post_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/cta_enabled_state"
                android:fontFamily="@font/poppins"
                android:text="@string/post_review"
                android:textAllCaps="false"
                android:textColor="@color/colorBase"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                app:cornerRadius="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_input_review" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>